[package]
name = "basalt"
version = "0.3.1"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
default-run = "basalt"

[dependencies]
structopt = "0.3"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1"
indexmap = {version = "1.6", features = ["serde-1"]}
dashmap = "4"
rayon = "1.5"
num-bigint = "0.2.6"

swc = {version = "0.43"}
swc_common = {version = "0.11.6", features = ["tty-emitter"]}
swc_ecma_parser = {version = "0.67.1"}
swc_atoms = {version = "0.2.7"}
swc_ecma_ast = {version = "0.49.4"}
swc_ecma_loader = {version = "0.15.0", features = ["node"]}
swc_ecma_visit = {version = "0.35.2"}
swc_ecma_dep_graph = {version = "0.35.0"}
swc_ecma_codegen = {version = "0.67.1"}
