[package]
name = "basalt"
version = "0.3.3"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
default-run = "basalt"

[dependencies]
structopt = "0.3"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1"
indexmap = {version = "1.6", features = ["serde-1"]}
dashmap = "4"
rayon = "1.5"
num-bigint = "0.2.6"

swc = "0.58"
swc_common = {version = "0.13", features = ["tty-emitter"]}
swc_ecma_parser = "0.72"
swc_atoms = "0.2.7"
swc_ecma_ast = "0.53"
swc_ecma_loader = {version = "0.19.0", features = ["node"]}
swc_ecma_visit = "0.39"
swc_ecma_dep_graph = "0.41"
swc_ecma_codegen = "0.72"
swc_ecma_transforms_base = "0.33"

#swc = {path = "../swc"}
#swc_common = {features = ["tty-emitter"], path = "../swc/common"}
#swc_ecma_parser = {path = "../swc/ecmascript/parser"}
#swc_atoms = {path = "../swc/atoms"}
#swc_ecma_ast = {path = "../swc/ecmascript/ast"}
#swc_ecma_loader = {features = ["node"], path = "../swc/ecmascript/loader"}
#swc_ecma_visit = {path = "../swc/ecmascript/visit"}
#swc_ecma_dep_graph = {path = "../swc/ecmascript/dep-graph"}
#swc_ecma_codegen = {path = "../swc/ecmascript/codegen"}
#swc_ecma_transforms_base = {path = "../swc/ecmascript/transforms/base"}
